digiKam 6.2.0 - Release date: 2019-06-??

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 279216 - "Resize image" feature is missing some useful options [patch].
002 ==> 406581 - "No such album" when dragging duplicated Tag to merge them.
003 ==> 406585 - Feature request: clean or hide empty Tags.
004 ==> 389657 - QFile::rename: Empty or null file name.
005 ==> 406610 - Hit enter when renaming, sometime don't rename correctly.
006 ==> 406637 - Duplicates "Search in" Doesn't Show Collection Name Upon First Selection.
007 ==> 406226 - Adding tags to a selection from a large list of no-tags images takes a very long time.
008 ==> 374302 - MYSQL : all Images with Geoinfo seem to be at (0°, 0°).
009 ==> 406815 - Can not setup Thunderbid in Send by mail.
010 ==> 