@@ -16,4 +16,5 @@ BUGFIXES:
 007 ==> 406226 - Adding tags to a selection from a large list of no-tags images takes a very long time.
 008 ==> 374302 - MYSQL : all Images with Geoinfo seem to be at (0°, 0°).
 009 ==> 406815 - Can not setup Thunderbid in Send by mail.
-010 ==> 
+010 ==> 406855 - Feature request: date from filename.
+011 ==> 
